--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: #F5F5F5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container{
+  background-color: white;
+  box-shadow: 10px 10px 5px grey;
+  width: 520px
+}
+.title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #EDE0E0;
+  font-size: 60px
+}
+.input-box {
+  width: 512px;
+  opacity:0.3;
+  font-size: 20px;
+  font-style:italic;
+}
